--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
-        "nesbot/carbon": "^2.66"
+        "nesbot/carbon": "^2.66",
+        "santigarcor/laratrust": "^7.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
