--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
         "nesbot/carbon": "^2.66",
-        "santigarcor/laratrust": "^7.2"
+        "santigarcor/laratrust": "^7.2",
+        "yajra/laravel-datatables": "1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
