--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
         "nesbot/carbon": "^2.66",
+        "pusher/pusher-php-server": "^7.2",
         "santigarcor/laratrust": "^7.2",
         "spatie/laravel-activitylog": "^3.17",
         "yajra/laravel-datatables": "1.5"
