--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "google/apiclient": "^2.13",
         "guzzlehttp/guzzle": "^7.5",
         "jenssegers/agent": "^2.6",
+        "laravel-notification-channels/onesignal": "^2.4",
         "laravel/breeze": "1.9.2",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.15",
